--- a/src/pug/components/contact_2.pug
+++ b/src/pug/components/contact_2.pug
@@ -1,11 +1,10 @@
-.container
- .row
-  .col-md-8
-   .contact-1__title
-    .contact-1--text
-     h4.text-left Ya te mostramos nuestras soluciones, ¿y ahora que?
-     .line__vertical-06
-     h6.text-left Si te ha interesado nuestros servicios o tienes alguna duda, sin ningun compromiso te invitamos a contactarnos
-  .col-md-3.offset-md-1.contact__btn
-   a(href=linksUrl[1])
-    button(type="button", class="btn btn-lighting") Contactar
+section.o-contact.-padSmTopBottom
+ .m-contactContent.-ContainerUniversal
+  .m-contactAlert
+   .m-contact__title
+    h3.text-left Ya te mostramos nuestras soluciones, ¿y ahora que?
+   .m-contact__text
+    h4.text-left Si te ha interesado nuestros servicios o tienes alguna duda, sin ningun compromiso te invitamos a contactarnos
+  .m-contact__button
+   .a-button
+    a.-fillLightin(href=linksUrl[1]) Contactar
