--- a/src/pug/lib/mixins.pug
+++ b/src/pug/lib/mixins.pug
@@ -17,6 +17,6 @@ mixin serviceBox(link=linksUrl[1],n,images,name,icon,text)
     img(class="img-tam sBox__img--"+n, src=linksUrl[1]+"assets/img/"+images, alt="project "+name)
    .sBox__details
     img(class="sBox__details--img", src=linksUrl[1]+"assets/img/iconos/"+icon, alt="project "+name)
-    h4.sBox__details--title=name
+    h3.sBox__details--title=name
    .sBox__description
-    h6.sBox__desc--text=text
+    p.sBox__desc--text=text
