--- a/src/pug/lib/variables.pug
+++ b/src/pug/lib/variables.pug
@@ -1,5 +1,6 @@
 -var service = ["Identidad Corporativa", "Diseño User Interface", "Páginas Web"]
--var linksUrl = ["/", "/"]
+-var titles = ["Acerca de", "Servicios", "Identidad Corporativa", "Diseño User Interface", "Páginas Web", "Contactar"]
+-var linksUrl = ["/", "/dist/"]
 -var linksInternos = ["identidad-corporativa.html", "diseno-ui.html", "acerca-de.html", "pagina-web.html", "mapsite.html"]
 -var linksExternos = ["https://www.instagram.com/monlogoteam", "https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"]
 -var titleOdoo = ["Conceptos y definiciones", "Normativa", "Preguntas Frecuentes"]
