--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -1,65 +1,138 @@
 // Buttons
-.btn.btn-primary {
-    font-size: 1.5rem;
-    margin: 1rem 0;
-    padding: 5px 15px;
-    border-radius: 1.5rem;
-    border-color: $color-secondary;
-    background-color: $color-secondary;
-    &:hover {
-        color: $color-lighting;
-        background-color: darken($color-secondary, 5%);
-        border-color: none;
-        transition-property: color, background-color, border-color;
-        transition-duration: 0.15s, 0.15s, 0.15s;
-        transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
-        transition-delay: 0s, 0s, 0s;
+.a-button {
+    margin-left: 8px;
+    &.-right {
+        position: absolute;
+        right: 0%;
+    }
+    @include mediaQueriesMd {
+        margin-left: $spaceXs;
+    }
+    @include mediaQueriesXs {
+        margin-left: 8px;
     }
 }
-.btn.btn-lighting {
-    font-size: 1.2rem;
-    border-color: $color-primary;
-    background-color: $color-lighting;
-    border-radius: 20px;
+
+.-btnMonlogo {
+    margin-left: 8px;
+    padding: 4px 20px;
+    border: 2px solid $color-lightin;
+    border-radius: $spaceSm;
+    font-size: $fontS2;
+    font-weight: 600;
+    color: $color-lightin;
+    &:hover {
+        background-color: $color-primary;
+        color: $color-lightin;
+    }
+}
+
+.-outlinePrimary {
+    padding: 6px 20px;
+    border: 2px solid $color-primary;
+    border-radius: $spaceSm;
+    font-weight: 600;
     color: $color-primary;
     &:hover {
-        color: $color-primary;
-        background-color: $color-lightengrey;
-        border-color: none;
-        transition-property: color, background-color, border-color;
-        transition-duration: 0.15s, 0.15s, 0.15s;
-        transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
-        transition-delay: 0s, 0s, 0s;
-    }
-}
-.btn.btn-secondary {
-    font-size: 1.2rem;
-    border-color: $color-variation;
-    background-color: $color-variation;
-    border-radius: 20px;
-    &:hover {
-        color: $color-lighting;
         background-color: $color-primary;
-        border-color: none;
-        transition-property: color, background-color, border-color;
-        transition-duration: 0.15s, 0.15s, 0.15s;
-        transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
-        transition-delay: 0s, 0s, 0s;
+        color: $color-lightin;
+    }
+    &:active, &:focus {
+        box-shadow: 0 0 0 3px $color-secondary;
     }
 }
-a.btn, a .btn {
-    border-radius: 20px;
-    &.btn-outline-secondary {
+
+.-outlineSecondary {
+    @extend .-outlinePrimary;
+    font-size: $fontS2 + 3;
+    font-weight: 600;
+    padding: 6px $spaceRg;
+}
+
+.-wierdPrimary {
+    padding: 8px 30px;
+    border-radius: $spaceSm;
+    font-weight: 600;
+    background: linear-gradient(to left, $color-primary 0%, $color-secondary 100%);
+    color: $color-lightin;
+    &:hover {
+        padding: 6px 28px;
+        background-image: none;
+        background-color: transparent;
         color: $color-primary;
-        border-color: $color-primary;
-        &:hover {
-            color: $color-lighting;
-            background-color: $color-primary;
-            border-color: none;
-            transition-property: color, background-color, border-color;
-            transition-duration: 0.15s, 0.15s, 0.15s;
-            transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
-            transition-delay: 0s, 0s, 0s;
+        border: 2px solid $color-primary;
+        .a-arrowRight {
+            content: url('../img/icons/arrow_right.svg');
         }
+    }
+    &:active, &:focus {
+        box-shadow: 0 0 0 3px $color-secondary;
+        background: linear-gradient(to left, $color-primary 0%, $color-secondary 100%);
+        color: $color-lightin;
+        .a-arrowRight {
+            content: url('../img/icons/arrow_right_white.svg');
+        }
+    }
+}
+
+/* .-wierdSecondary {
+    @extend .-wierdPrimary;
+    background: linear-gradient(to left, $color-secondary 0%, $color-grey 100%);
+} */
+
+.-fillPrimary {
+    @extend .-outlinePrimary;
+    background-color: $color-primary;
+    color: $color-lightin;
+    &:hover {
+        background-color: transparent;
+        color: $color-primary;
+    }
+    &:active, &:focus {
+        background-color: $color-primary;
+        color: $color-lightin;
+    }
+}
+
+.-fillSecondary {
+    @extend .-fillPrimary;
+    padding: 6px 20px;
+    background-color: $color-secondary;
+    border: 2px solid $color-secondary;
+    color: $color-lightin;
+    &:hover {
+        background-color: transparent;
+        color: $color-secondary;
+        .a-arrowRight {
+            content: url('../img/icons/arrow_right_secondary.svg');
+        }
+    }
+    &:active, &:focus {
+        box-shadow: 0 0 0 3px $color-calm;
+        background-color: $color-secondary;
+        color: $color-lightin;
+        .a-arrowRight {
+            content: url('../img/icons/arrow_right_white.svg');
+        }
+    }
+    // @include mediaQueriesXs {
+    //     padding: 6px 20px;
+    // }
+}
+
+.-fillLightin {
+    @extend .-fillPrimary;
+    padding: 6px 20px;
+    background-color: $color-lightin;
+    border: 2px solid $color-lightin;
+    color: $color-primary;
+    &:hover {
+        background-color: transparent;
+        color: $color-lightin;
+    }
+    &:active, &:focus {
+        box-shadow: 0 0 0 3px $color-secondary;
+        background-color: $color-lightin;
+        color: $color-primary;
     }
 }
