--- a/src/sass/components/_modus.scss
+++ b/src/sass/components/_modus.scss
@@ -13,10 +13,10 @@
             width: 550px;
         }
         h1 {
-            color: $color-lighting;
+            color: $color-lightin;
         }
         h5 {
-            color: $color-lighting;
+            color: $color-lightin;
             font-family: $font2;
             font-size: $fontS2 - 2;
         }
@@ -25,10 +25,10 @@
         width: 100%;
         h3 {
             padding-top: 10px;
-            color: $color-lighting;
+            color: $color-lightin;
         }
         h6 {
-            color: $color-lighting;
+            color: $color-lightin;
         }
         .modus__box {
             padding-top: 10px;
