--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -1,6 +1,6 @@
 .explanation {
     height: 800px;
-    background: linear-gradient(to top, $color-lightengrey 0%, $color-lighting 100%);
+    background: linear-gradient(to top, $color-lightgrey 0%, $color-lightin 100%);
     display: flex;
     align-items: center;
     .container-fluid {
