--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,21 +9,7 @@ html(lang="en")
   include base/header.pug
 
   // hero
-  section.hero-index.hero 
-   .opacity--darken
-    .container-lg.container-fluid
-     .hero__title
-      .hero__img
-       img(src=linksUrl[1]+"assets/img/astro/astro_him_rev1.png", alt="astro")
-      .hero__title--text
-       h1.text-left
-        | Lleva tu marca al
-        br
-        | siguiente nivel
-       h6 Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y un punto de referencia para tu industria.
-  div
-   .curve-container
-    .curve-bg
+  include components/index/_hero.pug
 
   // categories
   section.categories
@@ -31,17 +17,17 @@ html(lang="en")
     .row
      .categories__title
       .col-12.categories__title--text
-       h1.text--left
+       h2.text--left
         | Diseñamos identidad corporativa, páginas web, y más!
        .line__vertical-01
-       h6 Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría
-     include components/categories.pug
-  div
+       h4 Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría
+     include components/index/categories.pug
+  //- div
    .curve-container-md
     .curve-md
 
-  // modus
-  section.modus
+  //- modus
+   section.modus
    .container
     .modus__title
      .modus__title--text
@@ -62,11 +48,11 @@ html(lang="en")
   // faq
   include components/_faq.pug
 
-  // contact 1
+  //- contact 1
    section.contact
    include components/contact_1.pug
 
-  // proyects
+  //- proyects
    section.project
    .container
     .project__title
@@ -95,8 +81,7 @@ html(lang="en")
        button(type="button", class="btn btn-outline-secondary") Ver
 
   // Contact 2
-  section.contact
-   include components/contact_2.pug
+  include components/contact_2.pug
 
   // footer
   include base/footer.pug
