--- a/src/sass/components/_faq.scss
+++ b/src/sass/components/_faq.scss
@@ -1,23 +1,34 @@
 .faq-index {
-    height: 600px;
-    background: linear-gradient(to top, $color-lighting 0%, $color-lightengrey 100%);
+    background: linear-gradient(to top, $color-lightin 0%, $color-lightgrey 100%);
     display: flex;
     align-items: center;
+    justify-content: center;
     //margin-top: 2rem;
 }
+
+.m-faq {
+    display: grid;
+    grid-template-columns: 60% 1fr;
+    grid-gap: 0 $spaceRg;
+    grid-template-areas: "faqQuestions faqImg";
+    justify-content: center;
+    align-items: center;
+}
+
+.m-faq__question {
+    grid-area: faqQuestions;
+}
+
+.m-faq__img {
+    grid-area: faqImg;
+}
+
 .faq-index .faq {
-    //padding: 2rem 0;
     overflow: hidden;
     box-sizing: border-box;
     display: flex;
-    align-items: center;
-    .container {
-        widows: 100%;
-        padding-left: 0;
-        padding-right: 0;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    flex-direction: column;
+
     .faq-list {
         padding: 0;
         list-style: none;
@@ -27,50 +38,25 @@
             right: 0;
             top: 20px;
         }
-        /* a.collapsed i:active {
-            animation: plusRotate 3s 1ms;
-        } */
         li {
-            border-bottom: 1px solid $color-lightgrey;
-        }
-        /* a.collapsed {
-            color: #37797c;
-        } */
-        a {
-            color: $color-primary;
-            padding: 15px 0;
-            display: block;
-            position: relative;
-            font-family: $font2;
-            font-size: $fontS2;
-            font-weight: 300;
-            padding-right: 20px;
-            // background: $color-lighting;
-        }
-        a:hover {
-            color: $color-grey;
+            border-bottom: 1px solid $color-grey;
+            padding-bottom: 5px;
         }
         p {
             margin-bottom: 20px;
         }
     }
-    /* ul {
-        margin-top: 0;
-        margin-bottom: 1rem;
-    } */
     li::marker {
         visibility: visible;
     }
-    a .btn {
-        margin-bottom: 20px;
-    }
 }
 .img-rect {
-    text-align: center;
-    width: 300px;
     height: 370px;
+    display: flex;
+    justify-content: center;
     img {
-        width: 200px;
+        object-fit: contain;
+        height: 100%;
     }
 }
 
