--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: $color-lighting;
+    background: $color-lightin;
     height: 260px;
     display: flex;
     align-items: center;
