--- a/src/sass/components/_us.scss
+++ b/src/sass/components/_us.scss
@@ -1,7 +1,7 @@
 .us{
     width: 100%;
     height: 450px;
-    background: linear-gradient(to top, $color-lightengrey 0%, $color-lighting 100%);
+    background: linear-gradient(to top, $color-lightgrey 0%, $color-lightin 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,7 @@
         padding: 2rem;
         padding-left: 0;
         height: 380px;
-        background: $color-lighting;
+        background: $color-lightin;
         box-shadow: $shadow3;
         border-radius: 1rem;
         /* display: flex;
@@ -21,7 +21,7 @@
     &__img {
         height: 250px;
         width: 250px;
-        background-color: $color-lightengrey;
+        background-color: $color-lightgrey;
         border-radius: 50%;
     }
     .us__title {
