--- a/src/sass/lib/_mixins.scss
+++ b/src/sass/lib/_mixins.scss
@@ -14,7 +14,7 @@
 @mixin boxes--fly-1 {
     height: 200px;
     width: 550px;
-    background-color: $color-lighting;
+    background-color: $color-lightin;
     box-shadow: $shadow1;
     padding: 1.5rem;
     border-radius: 10px;
@@ -29,7 +29,7 @@
 @mixin boxes--fly-2 {
     height: 200px;
     width: 820px;
-    background-color: $color-lighting;
+    background-color: $color-lightin;
     box-shadow: $shadow1;
     padding: 1.5rem;
     border-radius: 10px;
@@ -45,7 +45,87 @@
 @mixin boxes--fly-3 {
     height: 200px;
     width: 200px;
-    background-color: $color-lighting;
+    background-color: $color-lightin;
     box-shadow: $shadow1;
     padding: 1.5rem;
+}
+
+// background hover
+@mixin greyHoverLinks {
+    background-color: rgba($color-darkgrey, $alpha: .1);
+    fill: rgba($color-darkgrey, $alpha: .1);
+}
+
+@mixin globalHoverLinks($color: $color-alert, $a: .5) {
+    background-color: rgba($color, $a);
+    fill: rgba($color, $a);
+}
+
+@mixin blueActiveLinks {
+    background-color: darken($color-secondary, $amount: 8%);
+    fill: darken($color-secondary, $amount: 8%);
+}
+
+@mixin thumnailBox($img: none) {
+    animation-delay: .5s;
+    background-image: $img;
+    background-size: contain;
+    background-position: center bottom;
+}
+
+// MediaQueries
+@mixin mediaQueriesXl {
+    @media only screen and (max-width: $breakXl) {
+        @content;
+    }
+}
+@mixin mediaQueriesLg {
+    @media only screen and (max-width: $breakLg) {
+        @content;
+    }
+}
+
+@mixin mediaQueriesMd {
+    @media only screen and (max-width: $breakMd) {
+        @content;
+    }
+}
+
+@mixin mediaQueriesSm {
+    @media only screen and (max-width: $breakSm) {
+        @content;
+    }
+}
+
+@mixin mediaQueriesXs {
+    @media only screen and (max-width: $breakXs) {
+        @content;
+    }
+}
+
+@mixin mediaQueriesXxs {
+    @media only screen and (max-width: $breakXxs) {
+        @content;
+    }
+}
+
+@mixin mediaQueries0 {
+    @media only screen and (max-width: $break0) {
+        @content;
+    }
+}
+
+// If & else functions
+@mixin footerFirmFunction($blueBg: true) {
+    @if $blueBg {
+        background-color: $color-primary;
+        p {
+            color: $color-lightin;
+        }
+    } @else {
+        background-color: transparent;
+        p {
+            color: $color-alert;
+        }
+    }
 }
