--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,29 +1,36 @@
+// URL externas (Fuentes, iconos, etc...)
 // @import "../../dist/assets/fonts/fontawesome/scss/fontawesome.scss";
-
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin|Roboto+Condensed&display=swap');
 
-@import "lib/_variables.scss";
-@import "lib/_mixins.scss";
-@import "lib/_functions.scss";
+// Lib
+@import "lib/variables";
+@import "lib/mixins";
+@import "lib/functions";
 
-@import "layout/_bootstrap_reboot.scss";
-@import "layout/_site.scss";
+// Layout
+@import "layout/bootstrap_reboot";
+@import "layout/site";
+@import "layout/grid";
 
-@import "base/_links.scss";
-@import "base/_buttons.scss";
-@import "base/_typography.scss";
-@import "base/_tables.scss";
+// Base
+@import "base/typography";
+@import "base/icons";
+@import "base/links";
+@import "base/buttons";
 
-@import "components/_header.scss";
-@import "components/_hero.scss";
-//@import "components/_carousel.scss";
-@import "components/_categories.scss";
-@import "components/_text.scss";
-@import "components/_us.scss";
-@import "components/_faq.scss";
-@import "components/_modus.scss";
-@import "components/_contact.scss";
-@import "components/_project.scss";
-@import "components/_footer.scss";
+// Components
+@import "components/header";
+@import "components/hero";
+//@import "components/carousel";
+@import "components/categories";
+@import "components/problem_story";
+@import "components/text";
+@import "components/us";
+@import "components/pack";
+@import "components/faq";
+@import "components/modus";
+@import "components/contact";
+@import "components/project";
+@import "components/footer";
 
-@import "components/_media.scss";
+@import "components/media";
